--- a/components/pagination/pagination.scss
+++ b/components/pagination/pagination.scss
@@ -40,3 +40,14 @@
     background: #54b0bd;
     border-color:#54b0bd !important;
 }
+
+#没有上一页下一页
+.nomore{
+    color:#b5b5b5 !important;
+}
+
+.ellipsis{
+    border:none !important;
+    margin:0 10px;
+    cursor:default !important;
+}
